# smallrunner

./: CLAUDE.md  README.md  pyproject.toml
example/: example.sh  example_script.py
src/smallrunner/: smallrunner.py
